@@ -2,12 +2,15 @@ package com.example.cataniaunited.api;
 
 import com.example.cataniaunited.dto.MessageDTO;
 import com.example.cataniaunited.dto.MessageType;
+import com.example.cataniaunited.player.PlayerService;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.quarkus.test.common.http.TestHTTPResource;
 import io.quarkus.test.junit.QuarkusTest;
+import io.quarkus.test.junit.mockito.InjectSpy;
 import io.quarkus.websockets.next.BasicWebSocketConnector;
 import io.quarkus.websockets.next.OpenConnections;
+import io.quarkus.websockets.next.WebSocketConnection;
 import jakarta.inject.Inject;
 import org.junit.jupiter.api.Test;
 
@@ -19,16 +22,23 @@ import java.util.List;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.doReturn;
 
 @QuarkusTest
 public class GameWebSocketTest {
 
     @TestHTTPResource
-    URI SERVER_URI;
+    URI serverUri;
 
     @Inject
     OpenConnections connections;
+
+    @InjectSpy
+    PlayerService playerService;
 
     @Test
     void testWebSocketOnOpen() throws InterruptedException {
@@ -36,7 +46,7 @@ public class GameWebSocketTest {
         CountDownLatch messageLatch = new CountDownLatch(1);
         var openConnections = connections.listAll().size();
         BasicWebSocketConnector.create()
-                .baseUri(SERVER_URI)
+                .baseUri(serverUri)
                 .path("/game")
                 .onTextMessage((connection, message) -> {
                     receivedMessages.add(message);
@@ -65,7 +75,7 @@ public class GameWebSocketTest {
         CountDownLatch messageLatch = new CountDownLatch(2);
 
         var webSocketClientConnection = BasicWebSocketConnector.create()
-                .baseUri(SERVER_URI)
+                .baseUri(serverUri)
                 .path("/game")
                 .onTextMessage((connection, message) -> {
                     receivedMessages.add(message);
@@ -97,12 +107,12 @@ public class GameWebSocketTest {
         CountDownLatch messageLatch = new CountDownLatch(2);
 
         var clientToClose = BasicWebSocketConnector.create()
-                .baseUri(SERVER_URI)
+                .baseUri(serverUri)
                 .path("/game")
                 .connectAndAwait();
 
         BasicWebSocketConnector.create()
-                .baseUri(SERVER_URI)
+                .baseUri(serverUri)
                 .path("/game")
                 .onTextMessage((connection, message) -> {
                     receivedMessages.add(message);
@@ -130,12 +140,14 @@ public class GameWebSocketTest {
         var objectMapper = new ObjectMapper();
         var unknownMessageDto = new MessageDTO();
         unknownMessageDto.setPlayer("Player 1");
+        // Set a non-null type so the switch statement can work. This will cause the default branch.
+        unknownMessageDto.setType(MessageType.ERROR);
 
         List<String> receivedMessages = new ArrayList<>();
         CountDownLatch messageLatch = new CountDownLatch(1);
 
         var webSocketClientConnection = BasicWebSocketConnector.create()
-                .baseUri(SERVER_URI)
+                .baseUri(serverUri)
                 .path("/game")
                 .onTextMessage((connection, message) -> {
                     if (message.startsWith("{")) {
@@ -145,21 +157,82 @@ public class GameWebSocketTest {
                 })
                 .connectAndAwait();
 
-        // Send message
         String sentMessage = objectMapper.writeValueAsString(unknownMessageDto);
         webSocketClientConnection.sendTextAndAwait(sentMessage);
 
-        // Wait up to 5 seconds for both messages to arrive
         boolean allMessagesReceived = messageLatch.await(5, TimeUnit.SECONDS);
 
         assertTrue(allMessagesReceived, "Not all messages were received in time!");
         assertEquals(1, receivedMessages.size());
 
-        MessageDTO responseMessage = objectMapper.readValue(receivedMessages.getFirst(), MessageDTO.class);
+        MessageDTO responseMessage = objectMapper.readValue(receivedMessages.get(0), MessageDTO.class);
 
         assertEquals(MessageType.ERROR, responseMessage.getType());
         assertEquals("Server", responseMessage.getPlayer());
         assertEquals("Unknown command", responseMessage.getLobbyId());
     }
 
+    @Test
+    void testSetUsernameCode() throws InterruptedException, JsonProcessingException {
+        ObjectMapper objectMapper = new ObjectMapper();
+        //Receiving two messages, since change is broadcast as well as returned directly
+        CountDownLatch latch = new CountDownLatch(2);
+        List<String> receivedMessages = new ArrayList<>();
+
+        var client = BasicWebSocketConnector.create()
+                .baseUri(serverUri)
+                .path("/game")
+                .onTextMessage((connection, message) -> {
+                    if (message.startsWith("{")) {
+                        receivedMessages.add(message);
+                        latch.countDown();
+                    }
+                })
+                .connectAndAwait();
+
+        MessageDTO setUsernameMsg = new MessageDTO();
+        setUsernameMsg.setType(MessageType.SET_USERNAME);
+        setUsernameMsg.setPlayer("Chicken");
+        client.sendTextAndAwait(setUsernameMsg);
+
+        assertTrue(latch.await(5, TimeUnit.SECONDS), "Did not receive LOBBY_UPDATED in time");
+        assertEquals(2, receivedMessages.size());
+
+        MessageDTO received = objectMapper.readValue(receivedMessages.getLast(), MessageDTO.class);
+        assertEquals(MessageType.LOBBY_UPDATED, received.getType());
+        assertEquals("Chicken", received.getPlayer());
+        assertNotNull(received.getPlayers());
+        assertTrue(received.getPlayers().contains("Chicken"));
+    }
+
+    @Test
+    void testSetUsernameOfNonExistingPlayer() throws JsonProcessingException, InterruptedException {
+        doReturn(null).when(playerService).getPlayerByConnection(any(WebSocketConnection.class));
+        ObjectMapper objectMapper = new ObjectMapper();
+        CountDownLatch latch = new CountDownLatch(1);
+        List<String> receivedMessages = new ArrayList<>();
+
+        var client = BasicWebSocketConnector.create()
+                .baseUri(serverUri)
+                .path("/game")
+                .onTextMessage((connection, message) -> {
+                    if (message.startsWith("{")) {
+                        receivedMessages.add(message);
+                        latch.countDown();
+                    }
+                })
+                .connectAndAwait();
+
+        MessageDTO setUsernameMsg = new MessageDTO();
+        setUsernameMsg.setType(MessageType.SET_USERNAME);
+        setUsernameMsg.setPlayer("Chicken");
+        client.sendTextAndAwait(setUsernameMsg);
+
+        assertTrue(latch.await(5, TimeUnit.SECONDS), "Did not receive all messages");
+
+        MessageDTO received = objectMapper.readValue(receivedMessages.getFirst(), MessageDTO.class);
+        assertEquals(MessageType.ERROR, received.getType());
+        assertEquals("Server", received.getPlayer());
+        assertEquals("No player session", received.getLobbyId());
+    }
 }
